--- a/src/components/Analytics/analytics.css
+++ b/src/components/Analytics/analytics.css
@@ -91,4 +91,7 @@
   .navLinkWrapper {
     display: block;
   }
+  .chartContainer {
+    height: 400px;
+  }
 }
