--- a/src/components/Timer/timer.css
+++ b/src/components/Timer/timer.css
@@ -56,6 +56,8 @@
   width: 100%;
   position: absolute;
   height: 90vh;
+  background-color: #1a1a1d;
+  overflow: hidden;
 }
 .navLinkWrapper {
   position: absolute;
